2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-link.c (dh_link_compare): Remove unused code to sort by
	book/page.

2008-10-06  Richard Hult  <richard@imendio.com>

	* data/assistant.js: 
	* data/assistant.css: Improve the style and handle libxml's API
	docs a bit better.

2008-10-06  Richard Hult  <richard@imendio.com>

	* misc/devhelp.el: Add function that uses the assistant.

2008-10-05  Richard Hult  <richard@imendio.com>

	* README:
	* configure.in: Update required dependency list.

2008-10-05  Richard Hult  <richard@imendio.com>

	* src/Makefile.am:
	* src/dh-assistant.c:
	* src/dh-assistant.h: Add a small "assistant" window for
	displaying just one hit.

	* data/Makefile.am:
	* data/assistant.css:
	* data/assistant.js: Add necessary glue for the assistant.
	
	* src/dh-base.[ch]: Remove unused function to get the windows.
	Hook up assistant, quit when there are no assistants or regular
	windows left.

	* src/dh-main.c: Add assistant search.

2008-10-05  Richard Hult  <richard@imendio.com>

	* src/dh-window.c: Improve some strings and break some long lines.

2008-10-05  Richard Hult  <richard@imendio.com>

	* data/devhelp.desktop.in.in: Don't mark the name for translation.

	* data/devhelp.schemas.in: Improve some strings.

2008-10-05  Richard Hult  <richard@imendio.com>

	* src/ige-conf-gconf.c: Fix build.

2008-10-04  Richard Hult  <richard@imendio.com>

	* src/dh-base.c:
	* src/dh-preferences.[ch]:
	* src/dh-window.c: Get rid of dh_preferences_init(), init on
	demand. Rename the conf keys to DH_CONF_*.

2008-10-04  Richard Hult  <richard@imendio.com>

	* acinclude.m4:
	* configure.in: Only depend on gconf on X11.

2008-10-04  Richard Hult  <richard@imendio.com>

	* data/ui/devhelp.glade: Remove the "advanced options"
	preference. Also remove lots of old unused parts, only keep the
	preference dialog.

	* configure.in: Add AC_PROG_OBJC so we can build ObjC sources.

	* src/Makefile.am:
	* src/ige-conf.h:
	* src/ige-conf-gconf.h: