@@ -1,5 +1,11 @@
 2008-10-06  Richard Hult  <richard@imendio.com>
 
+	* src/dh-link.[ch]: (dh_link_new): Don't care about id/base for
+	links other than books. Update copyright to reflect reality (the
+	orignal code has all been replaced).
+
+2008-10-06  Richard Hult  <richard@imendio.com>
+
 	* src/dh-link.c (dh_link_compare): Remove unused code to sort by
 	book/page.
 
